force-app/main/default/objects/Packing_List__c/Packing_List__c.object-meta.xml
<CustomObject>
    <label>Packing List</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Packing List No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packing Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>