force-app/main/default/objects/Packing_List__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Packing Lists</relationshipLabel>
    <relationshipName>Packing_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>