force-app/main/default/objects/Packing_List__c/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Note</label>
    <referenceTo>Sales_Order_Dispatch_Delivery_Note__c</referenceTo>
    <relationshipLabel>Packing Lists</relationshipLabel>
    <relationshipName>Packing_Lists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>