force-app/main/default/objects/Packing_List__c/fields/Delivery_Term__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Term__c</fullName>
    <formula>Delivery_Note__r.Sales_Order__r.Shipping_Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Term</label>
    <type>Text</type>
</CustomField>