force-app/main/default/objects/Packing_List__c/fields/Dispatch_Address__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Address__c</fullName>
    <label>Dispatch Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>