force-app/main/default/objects/Packing_List__c/fields/Dispatch_To__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatch To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Packing Lists (Dispatch To)</relationshipLabel>
    <relationshipName>Packing_Lists1</relationshipName>
    <type>Lookup</type>
</CustomField>