force-app/main/default/objects/Packing_List__c/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <label>Packaging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>