force-app/main/default/objects/Packing_List__c/fields/Packing_List_Number__c.field-meta.xml
<CustomField>
    <fullName>Packing_List_Number__c</fullName>
    <formula>if( text( Delivery_Note__r.Sales_Order__r.Ware_House__r.City__c) == &apos;Kolkata&apos;, &apos;PPLCU&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;PKL&apos;+RIGHT( Name , LEN(Name) - 4),if( text(Delivery_Note__r.Sales_Order__r.Ware_House__r.City__c) == &apos;Gurugram&apos;, &apos;PPLHO&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;PKL&apos;+RIGHT( Name , LEN(Name) - 4),&apos;Please select Place of Supply from SO.&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packing List Number</label>
    <type>Text</type>
</CustomField>