force-app/main/default/objects/Packing_List__c/fields/Shipping_GSTIN_No__c.field-meta.xml
<CustomField>
    <fullName>Shipping_GSTIN_No__c</fullName>
    <formula>Delivery_Note__r.Customer_Party__r.Shipping_GSTIN_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping GSTIN No.</label>
    <type>Text</type>
</CustomField>