force-app/main/default/objects/Packing_List__c/fields/Term_And_Condition__c.field-meta.xml
<CustomField>
    <fullName>Term_And_Condition__c</fullName>
    <label>Term And Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>