force-app/main/default/objects/Packing_List__c/fields/Validity_Days__c.field-meta.xml
<CustomField>
    <fullName>Validity_Days__c</fullName>
    <label>Validity(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>